[tool.poetry]
name = "mccross"
version = "0.1.1"
description = "Do you remember www?"
authors = ["nhanb <hi@imnhan.com>"]
license = "MIT"
packages = [
    { include = "mccross", from = "src" },
]

[tool.poetry.scripts]
mccross = "mccross:run"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.10"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
