[tool.poetry]
name = "mcross"
version = "0.5.11"
description = "Do you remember www?"
authors = ["nhanb <hi@imnhan.com>"]
license = "MIT"
packages = [
    { include = "mcross", from = "src" },
]
readme = "README.md"
homepage = "https://sr.ht/~nhanb/mcross/"
repository = "https://git.sr.ht/~nhanb/mcross"

[tool.poetry.scripts]
mcross = "mcross:run"

[tool.poetry.dependencies]
python = "^3.7"
curio = "^1.2"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.10"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
