[tool.poetry]
name = "mcross"
version = "0.5.18"
description = "Do you remember www?"
authors = ["nhanb <hi@imnhan.com>"]
license = "AGPL-3.0-only"
packages = [
    { include = "mcross", from = "src" },
]
readme = "README.md"
homepage = "https://sr.ht/~nhanb/mcross/"
repository = "https://git.sr.ht/~nhanb/mcross"

[tool.poetry.scripts]
mcross = "mcross:run"
mcross-info = "mcross:info"

[tool.poetry.dependencies]
python = "^3.7"
curio = "^1.2"
appdirs = "^1.4.4"
toml = "^0.10.1"

[tool.poetry.dev-dependencies]
python-language-server = "^0.31.10"
ipdb = "^0.13.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
